kubernetes/apps/cluster-policies/network-policies/app/allow-kube-apiserver.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-apiserver-controllers
spec:
  description: "Allow controllers to access kube-apiserver"
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/part-of
        operator: In
        values: ["flux", "cert-manager"]
  enableDefaultDeny:
    egress: false
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
